--- a/src/components/tournament/tournament-page-style.css
+++ b/src/components/tournament/tournament-page-style.css
@@ -197,4 +197,13 @@
 	align-items: center;
   margin: 10px 10px 10px 0;
 }
+.success-payment-icon {
+	background: none;
+	display: flex;
+	flex-direction: column;
+	gap: 3px;
+}
+.success-payment-icon p{
+	color: #58b002;
+}
 
